walkthrough part 1 and 2